--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "MOD NAME GOES HERE",
+    "name": "Persona 3",
     "description": "MOD DESCRIPTION GOES HERE",
     "developer":
     {
-        "name": "DEVELOPER NAME GOES HERE"
+        "name": "Kon"
     },
     "icons":
     {
