--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
         {
             "background_music":
             [
-                "music/track_1.mp3",
+                "It's Going Down Now.mp3",
 
             
             ],
